Cibyl (19)
	* Inlining of builtins (softfloat operations) has now been implemented
	in the C++ translator as well. Most important optimizations except for
	function colocation are now present in the C++ translator

	* The C++ translator now inlines lb/lh/lbu/lhu/sb/sh instructions as
	well (which the Python translator doesn't). This is done if the size
	of the method is small enough.

	* Honor the --only-translate option for C++ as well

	* Prune unused functions also in the C++ translator

	* Implemented the 32-bit mul/div optimization for the C++ translator
	as well. This is on by default and cannot be turned off

	* Added more sanity checks throughout the code, e.g., for snprintfs

	* Implemented splitting classes for C++ as well. This is needed as a
	workaround for blackberry problems.

	* Implemented call a table hierarchy in the C++ translator. This is
	needed as a workaround for problems on some phones

	* Added a compiler option to implement 8- and 16-bit loads and stores
	through subroutines instead of static methods in the runtime
	support. This should improve performance a bit

	* Mark the instructions used in each function

	* Implemented symbol exporting to Java with the CIBYL_EXPORT_SYMBOL
	macro and allow generation of these interfaces by the translator

	* Refactored the implementation of ELF section handling - much more
	general now

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (18)
	* Peephole optimization is now possible for the C++ translator

	* Micro optimizations of lb/lh/sb/sh in CRunTime.java

	* Error handling in strtoull has been improved

	* Added NOPH_MemoryFile_openIndirectSizeHint to provide more efficient
	allocation

	* Fixed bug in NOPH_MemoryFile_openIndirect - the data was overwritten
	on initial read if the file was larger than the bufsize (4096)

	* Fixed alignment bug for the ctors and dtors sections

	* Refactoring: Added a panic_if statement to replace some assertions